@@ -1,0 +1,5 @@
+This command purges the quests definitions from the server memory.
+
+It does not remove anything from the disk.
+
+This is used to avoid restarting the server when a quest definition changes.
